--- a/public/css/app.css
+++ b/public/css/app.css
@@ -474,8 +474,23 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: auto;
   margin-right: auto;
 }
+.t-mt-2 {
+  margin-top: 0.5rem;
+}
+.t-mt-3 {
+  margin-top: 0.75rem;
+}
+.t-mt-4 {
+  margin-top: 1rem;
+}
+.t-block {
+  display: block;
+}
 .t-flex {
   display: flex;
+}
+.t-grid {
+  display: grid;
 }
 .t-hidden {
   display: none;
@@ -495,6 +510,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .t-flex-grow {
   flex-grow: 1;
 }
+.t-grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
 .t-flex-col {
   flex-direction: column;
 }
@@ -504,13 +522,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .t-justify-center {
   justify-content: center;
 }
+.t-gap-4 {
+  gap: 1rem;
+}
+.t-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .t-bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.t-bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .t-px-4 {
   padding-left: 1rem;
@@ -518,6 +540,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .t-pt-1 {
   padding-top: 0.25rem;
+}
+.t-pr-2 {
+  padding-right: 0.5rem;
 }
 .t-text-gray-500 {
   --tw-text-opacity: 1;
@@ -532,6 +557,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 @font-face {
     font-family: "GmarketSansMedium";
     src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
@@ -543,12 +569,49 @@ Ensure the default browser behavior of the `hidden` attribute.
 html > body {
     font-family: "GmarketSansMedium";
     text-underline-position: under;
-  }
-  
-  @media (min-width: 640px) {
-  
-    .sm\:t-block {
-      display: block;
-    }
 }
 
+.multiline-truncate-2 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
+
+.multiline-truncate-3 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
+
+@media (min-width: 640px) {
+
+  .sm\:t-block {
+    display: block;
+  }
+
+  .sm\:t-grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 768px) {
+
+  .md\:t-grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px) {
+
+  .lg\:t-grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:t-grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
