:lipstick: Add detail Responsive Web
게시물 상세내용 반응형 작업

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -522,6 +522,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .t-flex-col {
   flex-direction: column;
 }
+.t-flex-wrap {
+  flex-wrap: wrap;
+}
 .t-items-center {
   align-items: center;
 }
